# KLYP

./: .gitignore  Cargo.toml  README.md  bundler.toml  shell.nix
.github/workflows/: release.yml
doc/: manual.typ
src/: editor.rs  lib.rs  main.rs  oversampling.rs  preferences.rs
src/antialiasing/: mod.rs
src/editor/: curve.rs  threshold_lines.rs
