[package]
name = "klyp"
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
authors = ["exa04 <223230@pm.me>"]
license = "GPL-3.0-or-later"
homepage = "https://youtu.be/dQw4w9WgXcQ"
description = "A short description of your plugin"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
arc-swap = "1.7.1"
dubble = "0.1.0"
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
astra = { git = "https://git.sr.ht/~voidstar-audio/ASTRA" }
cyma = { git = "https://git.sr.ht/~voidstar-audio/CYMA" }
serde = "1.0.228"
serde_json = "1.0.145"
platform-dirs = "0.3.0"
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false, features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
